Fix connect cluster apply when there is no connect cluster in Ns4Kafka configuration (#422)